--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ cookieconsent.run({"notice_banner_type":"simple","consent_type":"express","palet
             </div>
         </div>
         <div class="copyright">
-            <p>Copyright &copy; 2023. Made with <!--<i class="fas fa-heart">--></i>by Harsh.</p>
+            <p>Copyright &copy; 2023. Made with <i class="fa-duotone fa-code"></i>by Harsh.</p>
             <a href="#" id="open_preferences_center" class="cookies-preferences">Update cookies preferences</a>
         </div>
     </div>
