--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ cookieconsent.run({"notice_banner_type":"simple","consent_type":"express","palet
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="img-1.jpg" alt="">
+                    <img src="linkedin pf clear.png" alt="">
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
