--- a/index.html
+++ b/index.html
@@ -106,6 +106,14 @@ cookieconsent.run({"notice_banner_type":"simple","consent_type":"express","palet
                     <a href="#" onclick="unavailable(); return false;">Learn more</a>
                 </div>
             </div>
+            <div class="services-list">
+                <div>
+                    <i class="fas fa-code"></i>
+                    <h2>Wordpres</h2>
+                    <p>I provide professional website development services tailored to meet your business needs.</p>
+                    <a href="#" onclick="unavailable(); return false;">Learn more</a>
+                </div>
+            </div>
         </div>
     </div>
 
