--- a/index.html
+++ b/index.html
@@ -47,8 +47,10 @@ cookieconsent.run({"notice_banner_type":"simple","consent_type":"express","palet
             <i class="fas fa-bars" onclick="openmenu()"></i>
           </nav>
           <div class="header-text">
-            <p>Front-End Web Developer</p>
-            <h1>Hi, I'm <span>Harsh</span><br>Chaudhari From India</h1>
+           
+            <h1>Hi,I'm <span>Harsh</span><br>Chaudhari an</h1>  
+               <p>Front-End Web Developer</p>
+                <h1>From India</h1>
           </div>
         </div>
       </div>
@@ -63,7 +65,7 @@ cookieconsent.run({"notice_banner_type":"simple","consent_type":"express","palet
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
-                    <p>I am a 19 year old front-end web developer studyin BscIT(Currently in SY). I like coffee, programming/developing and hitting the gym!</p>
+                    <p>I am a 20 year old front-end web developer studyin BscIT(Currently in SY). I like coffee, programming/developing and hitting the gym!</p>
 
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
