--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/0f16caa2f5.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="main.css">
-    <title>Harsh Chaudhari</title>
+    <title>Harsh Chaudhari portfolio</title>
     <!--favicon-->
     <link rel="icon" type="image/x-icon" href="icon2.jpg">
 </head>
