--- a/index.html
+++ b/index.html
@@ -47,10 +47,8 @@ cookieconsent.run({"notice_banner_type":"simple","consent_type":"express","palet
             <i class="fas fa-bars" onclick="openmenu()"></i>
           </nav>
           <div class="header-text">
-           
-            <h1>Hi,I'm <span>Harsh</span><br>Chaudhari an</h1>  
+            <h1>Hi,I'm <span>Harsh</span><br>Chaudhari From India</h1>  
                <p>Front-End Web Developer</p>
-                <h1>From India</h1>
           </div>
         </div>
       </div>
