--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@ cookieconsent.run({"notice_banner_type":"simple","consent_type":"express","palet
                         <a href="https://www.instagram.com/Fizzy_the_foo/"><i class="fab fa-instagram"></i></a>
                         <a href="https://github.com/ITsheit"><i class="fab fa-github"></i></a>
                         <a href="https://www.instagram.com/i.t_sheit/"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/in/harsh-chaudhari-web/"><i class="fa-brands fa-linkedin"></i></a>
                     </div>
                     <a href="#" onclick="unavailable(); return false;" download class="btn btn2">Download CV</a>
                 </div>
